# standalone-o2k-conversion

./: .gitignore  README.md  binary_search_inspection.py  examine_logs.ipynb  example.py  incremental_inspection.py  model_conversion.py  model_inspection.py  parse_logs.py  parse_logs_incremental.py  pyproject.toml  requirements.txt  submodel_test.py  validate_model_matching.py
sandbox/: submodel_test.py
