[tool.poetry]
name = "standalone-onnx2keras-conversion"
version = "0.1.0"
description = ""
authors = ["ranhomri <ran.homri@tensorleap.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
onnx2kerastl = "^0.0.152"
tensorflow-macos = "2.11.0"
pandas = "2.0.0"
ipykernel = "^6.29.5"
scipy = "1.13.0"


[tool.poetry.group.dev.dependencies]
matplotlib = "3.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
